# fhir-r4-mcp-server

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/vendors/: nextgen.yaml
src/fhir_r4_mcp/: __init__.py  __main__.py  openapi.py  server.py
src/fhir_r4_mcp/audit/: __init__.py  events.py  logger.py
src/fhir_r4_mcp/cache/: __init__.py  memory_cache.py  redis_cache.py
src/fhir_r4_mcp/cds/: __init__.py  hooks.py  service.py
src/fhir_r4_mcp/core/: __init__.py  client.py  connection_manager.py  response_processor.py
src/fhir_r4_mcp/core/auth/: __init__.py  base.py  smart_backend.py
src/fhir_r4_mcp/subscriptions/: __init__.py  handlers.py  manager.py  websocket.py
src/fhir_r4_mcp/tools/: __init__.py
src/fhir_r4_mcp/utils/: __init__.py  errors.py  logging.py
src/fhir_r4_mcp/validation/: __init__.py  coding_systems.py  search_params.py  validators.py  value_sets.py
src/fhir_r4_mcp/vendors/: __init__.py  base.py  generic.py  nextgen.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_audit.py  test_cache.py  test_cds_hooks.py  test_chained_search.py  test_errors.py  test_response_processor.py  test_subscriptions.py  test_validators.py  test_value_sets.py
