[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fhir-r4-mcp-server"
version = "0.1.0"
description = "AI-agnostic Model Context Protocol server for FHIR R4 EHR integration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Glyptic AI", email = "dev@glyptic.ai" }
]
keywords = [
    "fhir",
    "mcp",
    "model-context-protocol",
    "healthcare",
    "ehr",
    "nextgen",
    "epic",
    "cerner",
    "ai",
    "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
]
cache = [
    "redis>=5.0.0",
]
websocket = [
    "websockets>=12.0",
]
all = [
    "redis>=5.0.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/glyptic-ai/fhir-r4-mcp-server"
Documentation = "https://github.com/glyptic-ai/fhir-r4-mcp-server#readme"
Repository = "https://github.com/glyptic-ai/fhir-r4-mcp-server.git"
Issues = "https://github.com/glyptic-ai/fhir-r4-mcp-server/issues"

[project.scripts]
fhir-r4-mcp = "fhir_r4_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fhir_r4_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["fhir_r4_mcp"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
